@@ -120,7 +120,8 @@ class DensityParameters(object):
     topology = TPR
     trajectory = XTC
     delta = 2.0
-    selections = {'static': "name OW",
+    selections = {'none': "resname None",
+                  'static': "name OW",
                   'dynamic': "name OW and around 4 (protein and resid 1-10)",
                   'solute': "protein and not name H*",
                   }
@@ -254,6 +255,27 @@ class TestDensityAnalysis(DensityParameters):
                 delta=self.delta, xdim="MDAnalysis", ydim=10.0, zdim=10.0,
                 gridcenter=self.gridcenters['static_defined']).run(step=5)
 
+    def test_warn_noatomgroup(self, universe):
+        regex = ("No atoms in AtomGroup at input time frame. "
+                 "This may be intended; please ensure that "
+                 "your grid selection covers the atomic "
+                 "positions you wish to capture.")
+        with pytest.warns(UserWarning, match=regex):
+            D = density.DensityAnalysis(
+                universe.select_atoms(self.selections['none']),
+                delta=self.delta, xdim=1.0, ydim=2.0, zdim=2.0, padding=0.0,
+                gridcenter=self.gridcenters['static_defined']).run(step=5)
+
+    def test_ValueError_noatomgroup(self, universe):
+        with pytest.raises(ValueError, match="No atoms in AtomGroup at input"
+                                             " time frame. Grid for density"
+                                             " could not be automatically"
+                                             " generated. If this is"
+                                             " expected, a user"
+                                             " defined grid will "
+                                             "need to be provided instead."):
+            D = density.DensityAnalysis(
+                universe.select_atoms(self.selections['none'])).run(step=5)
 
 class TestGridImport(object):
 
